data/derived/comb/progs/unify/prog4813.ml.out
Characters 45-47:
  let stringOfList f l = List.map (sepConcat l "") f;;
                                               ^^
Error: This expression has type string but an expression was expected of type
         string list
